# whodis

./: .gitignore  Cargo.toml  Makefile
account-api/: Cargo.toml
oauth/: Cargo.toml
oauth-api/: Cargo.toml
oauth-api/sql/: 01_init.sql
oauth-api/src/: api_authorize.rs  db.rs  main.rs  schema.rs
oauth/src/: account.rs  lib.rs  user.rs
whodis-web/: package-lock.json  package.json
whodis-web/src/: index.ts  main.ts
whodis-web/src/assets/: oauth.ts
whodis-web/src/components/: Login.vue
whodis-web/src/views/: AccountLoginView.vue  HomeView.vue  LoginView.vue
