[workspace]
resolver = "2"
members = ["account-api", "oauth", "oauth-api"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "4.5"
jsonwebtoken ="9.3"
once_cell = "1.19"
reqwest = "0.12"
rocket = "0.5"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
uuid = "1.8"