[workspace]
resolver = "2"
members = ["account-api", "oauth", "oauth-api"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
barrel = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
jsonwebtoken = "9.3"
once_cell = "1.19"
r2d2 = "0.8"
redis = { version = "0.25", features = ["r2d2", "tokio-comp", "aio"] }
reqwest = "0.12"
rocket = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
