[package]
name = "oauth-api"
version.workspace = true
edition.workspace = true

[dependencies]
oauth = { path = "../oauth" }
anyhow.workspace = true
thiserror.workspace = true
r2d2.workspace = true
redis.workspace = true
rocket.workspace = true
sha256.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio.workspace = true
 
[features]
it=[]